--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,65 @@
 @import './common';
 @import './example';
+body{
+  text-align: center;
+}
+.main-container{
+display: flex;
+padding: 30px 0;
+flex-direction: column;
+flex-wrap: nowrap;
+align-items: center;
+
+ 
+}
+.container {
+  max-width: 1600px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 30px 0;
+}
+li {
+  list-style: none;
+}
+img {
+  width: 100%;
+  height: 250px;
+  margin: 0;
+  display: block;
+  object-fit: cover
+}
+.search-form {
+
+  display: flex;
+  justify-content: center;
+  height: 30px;
+
+}
+.gallery-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  padding: 0;
+}
+.info {
+  display: flex;
+  justify-content: space-around;
+}
+.load-more {
+  background-color: rgb(30, 32, 158);
+  border-radius: 5px;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+}
+.photo-card {
+  border: 1px solid black;
+  border-radius: 5px;
+  width: calc((100% - 90px) / 4);
+}
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
